--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,13 +39,13 @@ layout: default
 
           {% if page.previous.url %}
           <a class="btn btn-primary float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}"
-            data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline">
-              Post</span></a>
+            data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Publicación<span class="d-none d-md-inline">
+              anterior</span></a>
           {% endif %}
           {% if page.next.url %}
           <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}"
-            data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
-              Post</span> &rarr;</a>
+            data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Siguiente<span class="d-none d-md-inline">
+              publicación</span> &rarr;</a>
           {% endif %}
 
         </div>
